@@ -2,9 +2,24 @@ package io.github.compilerstuck.sound;
 
 import io.github.compilerstuck.control.model.ArrayModel;
 import io.github.compilerstuck.visual.Marker;
-import javax.sound.midi.*;
+import java.lang.reflect.Method;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+import javax.sound.midi.Instrument;
+import javax.sound.midi.MidiChannel;
+import javax.sound.midi.MidiSystem;
+import javax.sound.midi.MidiUnavailableException;
+import javax.sound.midi.Synthesizer;
+import javax.sound.sampled.SourceDataLine;
 
 public class MidiSys extends Sound {
+
+  private static final Logger LOGGER = Logger.getLogger(MidiSys.class.getName());
+
+  /** SoftSynthesizer default is 200ms; that makes monophonic retriggers smear and click. */
+  private static final long TARGET_LATENCY_MICROS = 20_000L;
 
   private final Synthesizer synthesizer;
   private final MidiChannel synthesizerChannel;
@@ -12,7 +27,7 @@ public class MidiSys extends Sound {
   public MidiSys(ArrayModel arrayController) throws MidiUnavailableException {
     super(arrayController);
     synthesizer = MidiSystem.getSynthesizer();
-    synthesizer.open();
+    openSynthesizer(synthesizer);
     synthesizer.loadAllInstruments(synthesizer.getDefaultSoundbank());
     synthesizerChannel = synthesizer.getChannels()[10];
 
@@ -26,10 +41,34 @@ public class MidiSys extends Sound {
     synthesizerChannel.programChange(synthesizer.getLoadedInstruments()[4].getPatch().getProgram());
   }
 
+  /**
+   * Prefer a low SoftSynthesizer buffer when the JVM opens {@code com.sun.media.sound} (manifest
+   * {@code Add-Opens} or {@code --add-opens}). Falls back to the default {@link Synthesizer#open()}.
+   */
+  private static void openSynthesizer(Synthesizer synthesizer) throws MidiUnavailableException {
+    try {
+      Method open = synthesizer.getClass().getMethod("open", SourceDataLine.class, Map.class);
+      open.setAccessible(true);
+      Map<String, Object> info = new HashMap<>();
+      info.put("latency", TARGET_LATENCY_MICROS);
+      open.invoke(synthesizer, null, info);
+      LOGGER.log(
+          Level.FINE, "Opened SoftSynthesizer with latency={0}µs", synthesizer.getLatency());
+      return;
+    } catch (ReflectiveOperationException | RuntimeException e) {
+      LOGGER.log(
+          Level.FINE,
+          "Low-latency SoftSynthesizer open unavailable; using default synthesizer.open()",
+          e);
+    }
+    synthesizer.open();
+  }
+
   @Override
   public void playSound(int index) {
 
     if (!isMuted && index >= 0 && arrayController.getMarker(index) == Marker.SET) {
+      // Hard cut (same as main): Electric Piano release tails from noteOff change the timbre.
       synthesizerChannel.allSoundOff();
       synthesizerChannel.allNotesOff();
 
